fix(): scrollbar style/width. nav transition feature(): localstorage for context cart

--- a/FrontEndMentor/37_audiophile_ecommerce/frontend/src/assets/sass/base/_globals.scss
+++ b/FrontEndMentor/37_audiophile_ecommerce/frontend/src/assets/sass/base/_globals.scss
@@ -29,6 +29,18 @@ body {
   text-rendering: optimizeSpeed;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  overflow-y: overlay;
+  &::-webkit-scrollbar-track {
+    background-color: hsla(0deg, 0%, 0%, 0.2);
+  }
+  &::-webkit-scrollbar {
+    background-color: transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: hsla(0deg, 0%, 0%, 0.5);
+    border-radius: 5px;
+  }
 }
 
 img {
