--- a/FrontEndMentor/37_audiophile_ecommerce/frontend/src/components/nav/_Nav.module.scss
+++ b/FrontEndMentor/37_audiophile_ecommerce/frontend/src/components/nav/_Nav.module.scss
@@ -19,8 +19,11 @@
     background-color: transparent;
   }
 
-  &__positionSticky {
+  &__positionStickyBgColor {
     background-color: c.$col-2c;
+  }
+
+  &__positionStickyTransition {
     transition: a.$nav-sticky-transition;
   }
 
